--- a/about.html
+++ b/about.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="src/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -17,13 +22,25 @@
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">Features</a>
             <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+
           </div>
         </div>
       </nav>
+      <div class="about-container mb-5 p-5">
     <h3>Hello I am</h3>
     <h1>Mbali Letsoara</h1>
     <h2>I am a software developer, based in South Africa</h2>
+    </div>
+    <div class="container">
+    <img src="images/Mbali.png" alt="" width="330px" class="shadow p-3 mb-5 bg-white rounded">
+    
+    <p>I am a 25-year-old female student developer residing in South Africa. With a passion for technology and a keen interest in learning, I am dedicated to honing my skills in programming and software development. Currently pursuing my education through Shecodes foundation for girls, I am actively engaged in expanding my knowledge base and tackling challenges in the field.
+
+      Outside of my academic pursuits, I enjoy a variety of hobbies. I find solace in the pages of books, I love watching movies, and cherishe moments spent with my loved ones. Despite my age, I embrace my fondness for cartoons, finding joy and inspiration in their stories.
+      
+      Driven by a desire for growth and advancement, I aspire to become an experienced developer in the future. With a goal of mastering both front-end and back-end development, I envision myself evolving into a versatile full-stack developer. Through my dedication to continuous learning and a proactive approach to challenges, I am poised to carve out a successful career in the dynamic world of technology.</p>
+  </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
