--- a/about.html
+++ b/about.html
@@ -12,15 +12,15 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar shadow-sm p-3 mb-5 bg-white rounded navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Mbali Letsoara</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="projects.html">Projects</a>
             <a class="nav-item nav-link" href="#">Pricing</a>
             <a class="nav-item nav-link" href="#">Pricing</a>
 
@@ -28,19 +28,20 @@
         </div>
       </nav>
       <div class="about-container mb-5 p-5">
-    <h3>Hello I am</h3>
+    <h3>👋Hello I am</h3>
     <h1>Mbali Letsoara</h1>
-    <h2>I am a software developer, based in South Africa</h2>
+    <h2>I am a student software developer, based in South Africa🇿🇦</h2>
     </div>
     <div class="container">
     <img src="images/Mbali.png" alt="" width="330px" class="shadow p-3 mb-5 bg-white rounded">
     
-    <p>I am a 25-year-old female student developer residing in South Africa. With a passion for technology and a keen interest in learning, I am dedicated to honing my skills in programming and software development. Currently pursuing my education through Shecodes foundation for girls, I am actively engaged in expanding my knowledge base and tackling challenges in the field.
+    <p>I am a 25-year-old female student developer residing in South Africa. I started my coding journey as a complete beginner. I then saw the Shecodes foundation for girls, where I was challenged to learn and actively engage with a few laguages found in the IT field. I am dedicated to honing my skills in the IT industry especially because I found myself enjoying the challenges, it has been a roller coaster but it is so rewarding to be able to fix any bugs encountered in my code.
 
-      Outside of my academic pursuits, I enjoy a variety of hobbies. I find solace in the pages of books, I love watching movies, and cherishe moments spent with my loved ones. Despite my age, I embrace my fondness for cartoons, finding joy and inspiration in their stories.
+      Outside of my academic pursuits, I enjoy a variety of hobbies. I find solace in the pages of books, I love watching movies, and cherish moments spent with my loved ones. Despite my age, I embrace my fondness for cartoons, finding joy and inspiration in their stories.
       
       Driven by a desire for growth and advancement, I aspire to become an experienced developer in the future. With a goal of mastering both front-end and back-end development, I envision myself evolving into a versatile full-stack developer. Through my dedication to continuous learning and a proactive approach to challenges, I am poised to carve out a successful career in the dynamic world of technology.</p>
   </div>
+  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
