added html and bootstrap in project file

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <h2>I am a student software developer, based in South Africa🇿🇦</h2>
     </div>
     <div class="container">
-    <img src="images/Mbali.png" alt="" width="330px" class="shadow p-3 mb-5 bg-white rounded">
+    <img src="images/Mbali.png" alt="" width="330px" class="img-fluid shadow p-3 mb-5 bg-white rounded">
     
     <p>I am a 25-year-old female student developer residing in South Africa. I started my coding journey as a complete beginner. I then saw the Shecodes foundation for girls, where I was challenged to learn and actively engage with a few laguages found in the IT field. I am dedicated to honing my skills in the IT industry especially because I found myself enjoying the challenges, it has been a roller coaster but it is so rewarding to be able to fix any bugs encountered in my code.
 
