created contant and qualifications files

--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="about.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">Projects</a>
-            <a class="nav-item nav-link" href="#">Achievements</a>
-            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link" href="qualifications.html">Qualifications</a>
+            <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
       </nav>
