--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="projects.html">Projects</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link" href="qualifications.html">Qualifications</a>
+            <a class="nav-item nav-link" href="contact.html">Contact</a>
 
           </div>
         </div>
