--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <nav class="navbar shadow-sm p-3 mb-5 bg-white rounded navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top shadow-sm p-3 mb-5 border rounded navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Mbali Letsoara</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -20,20 +20,20 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="projects.html">Projects</a>
-            <a class="nav-item nav-link" href="qualifications.html">Qualifications</a>
-            <a class="nav-item nav-link" href="contact.html">Contact</a>
+            <a class="nav-item nav-link" href="projects.html">My work</a>
+            <a class="nav-item nav-link" href="qualifications.html">Achievements</a>
+            <a class="nav-item nav-link" href="contact.html">Contact me</a>
 
           </div>
         </div>
       </nav>
-      <div class="about-container mb-5 p-5">
+      <div class="about-container mb-5 p-3">
     <h3>👋Hello I am</h3>
     <h1>Mbali Letsoara</h1>
     <h2>I am a student software developer, based in South Africa🇿🇦</h2>
     </div>
     <div class="container">
-    <img src="images/Mbali.png" alt="" width="330px" class="img-fluid shadow p-3 mb-5 bg-white rounded">
+    <img src="images/Mbali.png" alt="" width="400px" class="img-fluid shadow-sm mb-5 border rounded">
     
     <p>I am a 25-year-old female student developer residing in South Africa. I started my coding journey as a complete beginner. I then saw the Shecodes foundation for girls, where I was challenged to learn and actively engage with a few laguages found in the IT field. I am dedicated to honing my skills in the IT industry especially because I found myself enjoying the challenges, it has been a roller coaster but it is so rewarding to be able to fix any bugs encountered in my code.
 
@@ -41,7 +41,9 @@
       
       Driven by a desire for growth and advancement, I aspire to become an experienced developer in the future. With a goal of mastering both front-end and back-end development, I envision myself evolving into a versatile full-stack developer. Through my dedication to continuous learning and a proactive approach to challenges, I am poised to carve out a successful career in the dynamic world of technology.</p>
   </div>
-  
+  <footer>
+    <a href="https://github.com/Mbalie3737/My_portfolio">github</a>
+  </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
