--- a/qualifications.html
+++ b/qualifications.html
@@ -3,25 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My_Achievements</title>
     <link rel="stylesheet" href="src/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar sticky-top shadow-sm p-3 mb-5 border rounded navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Mbali Letsoara</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="about.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="projects.html">My work</a>
+            <a class="nav-item nav-link" href="#">Achievements</a>
+            <a class="nav-item nav-link" href="contact.html">Contact me</a>
+          </div>
+        </div>
+      </nav>
     <h1 class="mb-5 p-5 text-center">My Shecodes certificates</h1>
     <div class="image-container">
         <div class="row">
-            <div class="col-md-4">
-    <img src="images/Mbali-basics-Certificate.png" alt="" width="400px" class="img-fluid">
+            <div class="col-sm-4">
+    <img src="images/Mbali-basics-Certificate.png" alt="" class="img-fluid shadow-sm border mb-3">
     </div>
-    <div class="col-md-4">
-    <img src="images/Mbali-Plus-Certificate.png" alt="" width="400px" class="img-fluid">
+    <div class="col-sm-4">
+    <img src="images/Mbali-Plus-Certificate.png" alt="" class="img-fluid shadow-sm border mb-3">
     </div>
-    <div class="col-md-4">
-    <img src="images/Responsive-certificate.png" alt="" width="400px" class="img-fluid">
+    <div class="col-sm-4">
+    <img src="images/Responsive-certificate.png" alt="" class="img-fluid shadow-sm border mb-3">
     </div>
     </div>
     </div>
+    <footer>
+      <a href="https://github.com/Mbalie3737/My_portfolio">github</a>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
