renamed about to index.html

--- a/qualifications.html
+++ b/qualifications.html
@@ -18,7 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="about.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="projects.html">My work</a>
             <a class="nav-item nav-link" href="#">Achievements</a>
             <a class="nav-item nav-link" href="contact.html">Contact me</a>
