added links to buttons

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
   
 </head>
 <body>
-    <nav class="navbar sticky-top shadow-sm mb-5 p-3 border rounded navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top shadow-sm mb-5 p-3 border rounded navbar-expand-lg navbar-light bg-light ">
         <a class="navbar-brand" href="#">Mbali Letsoara</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,52 +26,38 @@
           </div>
         </div>
       </nav>
-    <h1 class="text-center">Have a look at some of my projects!</h1>
-    <div class="card mb-3" style="max-width: 540px;">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="images/reading.png" class="card-img img-fluid shadow-sm border mb-3" alt="...">
+    <h1 class="text-center mb-5">Have a look at some of my projects!</h1>
+  <div class="work-container">
+    <div class="row">
+      <div class="col-sm-6 mb-5">
+            <img src="images/reading.png"class="img-fluid shadow-sm border mb-3 rounded" alt="...">
+  </div>
+  <div class="col-sm-6 mb-5">
+              <p>This was my first project as a begginer, I had so much fun doing a project based on one of my hobbies.</p>
+               <a class="btn border" style="background-color: #885df1; color: white;" href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/994/103/original/basics_project.html?1703277254" role="button">Learn more</a>
           </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This was my first project as a begginer, I had so much fun doing a project based on one of my hobbies.</p>
-              <a class="btn btn-primary" href="#" role="button">Link</a>
-            </div>
-          </div>
+<div class="col-sm-6 mb-5">
+          <p>This was my croissant website. It was a bit challenging because I was learning new things but I think I got the hang of it and built a basic website for one of my favourite foods.</p>
+          <a class="btn border" style="background-color: #885df1; color: white;" href="https://mbali-letsoara-croissant.netlify.app/" role="button">Learn more</a>
+</div>
+      <div class="col-sm-6 mb-5">
+            <img src="images/croissant-website.png" class="img-fluid shadow-sm border mb-3 rounded " alt="...">
         </div>
-      </div>
-      <div class="card mb-3" style="max-width: 540px;">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="images/croissant-website.png" class="card-img " alt="...">
+          <div class="col-sm-6 mb-3">
+            <img src="images/weather-app.png" class="img-fluid shadow-sm border mb-3 rounded" alt="...">
           </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This was my croissant website. It was a bit challenging because I was learning new things but I think I got the hang of it and built a basic website for one of my favourite foods.</p>
-              <a class="btn btn-primary" href="#" role="button">Link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card mb-3" style="max-width: 540px;">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="images/weather-app.png" class="card-img" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This project was the most challenging because it included some advanced javascript, it was a rollercoaster but as soon as I started understanding java a bit I was able to get my desired results with regards to APIs and my forms, it is such a rewarding feeling when my code responds the way I expect it to, and also if there are any bugs it is so nice to finally spot the bug and fix it. Every challenge made me fall in love with coding all over again.
+          <div class="col-sm-6 mb-3">
+              <p>This project was the most challenging because it included some advanced javascript, it was a rollercoaster but as soon as I started understanding java a bit I was able to get my desired results with regards to APIs and my forms, it is such a rewarding feeling when my code responds the way I expect it to, and also if there are any bugs it is so nice to finally spot the bug and fix it. Every challenge made me fall in love with coding all over again.
               </p>
-              <a class="btn btn-primary" href="#" role="button">Link</a>
-            </div>
-          </div>
-        </div>
-      </div>
+              <a class="btn border" style="background-color: #885df1; color: white;" href="https://resonant-unicorn-36d89f.netlify.app/" role="button">Learn more</a>
+              </div>
+              </div>
+              </div>
       <footer>
-        <a href="https://github.com/Mbalie3737/My_portfolio">github</a>
+        <p>This project was coded by Mbali Letsoara, published on
+        <a href="https://github.com/Mbalie3737/My_portfolio">Github</a>
+        hosted on
+        <a href="https://mbali-portfolio.netlify.app/">Netlify</a>.</p>
       </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
