--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,12 +27,17 @@
         </div>
       </nav>
       <div class="contact-container text-center mb-5 p-5">
-    <h1 class="mb-5 p-5">☎️Contact me!</h1>
+    <h1 class="mb-5 p-5">☎️Where to find me!</h1>
     <h3>Email me at: <a href="mailto:mbaliletsoara31@gmail.com">mbaliletsoara31@gmail.com</a></h3>
+    <h3>Instagram: <a href="https://www.instagram.com/mbalie3737/?hl=en">Mbalie3737</a></h3>
+    <h3>Twitter: <a href="https://twitter.com/Mbalie78546014">@Mbalie78546014</a></h3>
     <h3>Whatsapp: 0685750358</h3>
     </div>
     <footer>
-      <a href="https://github.com/Mbalie3737/My_portfolio">github</a>
+      <p>This project was coded by Mbali Letsoara, published on
+      <a href="https://github.com/Mbalie3737/My_portfolio">Github</a>
+      hosted on
+      <a href="https://mbali-portfolio.netlify.app/">Netlify</a>.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
