Made portfolio SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact-me</title>
+    <meta name="description" content="contact Mbali_Letsoara">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,31 +14,31 @@
 </head>
 <body>
     <nav class="navbar sticky-top shadow-sm mb-5 p-3 border rounded navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Mbali Letsoara</a>
+        <a class="navbar-brand" href="#" title="Mbali_Letsoara">Mbali Letsoara</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="projects.html">My work</a>
-            <a class="nav-item nav-link" href="qualifications.html">Achievements</a>
-            <a class="nav-item nav-link" href="#">Contact me</a>
+            <a class="nav-item nav-link active" href="index.html" title="Home-page">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="projects.html" title="work-page">My work</a>
+            <a class="nav-item nav-link" href="qualifications.html" title="My_Achievements">Achievements</a>
+            <a class="nav-item nav-link" href="#" title="contact-page">Contact me</a>
           </div>
         </div>
       </nav>
       <div class="contact-container text-center mb-5 p-5">
     <h1 class="mb-5 p-5">☎️Where to find me!</h1>
-    <h3>Email me at: <a href="mailto:mbaliletsoara31@gmail.com">mbaliletsoara31@gmail.com</a></h3>
-    <h3>Instagram: <a href="https://www.instagram.com/mbalie3737/?hl=en">Mbalie3737</a></h3>
-    <h3>Twitter: <a href="https://twitter.com/Mbalie78546014">@Mbalie78546014</a></h3>
+    <h3>Email me at: <a href="mailto:mbaliletsoara31@gmail.com" target="_blank" title="Mbali-email">mbaliletsoara31@gmail.com</a></h3>
+    <h3>Instagram: <a href="https://www.instagram.com/mbalie3737/?hl=en" target="_blank" title="Instagram-profile">Mbalie3737</a></h3>
+    <h3>Twitter: <a href="https://twitter.com/Mbalie78546014" target="_blank" title="Twitter-profile">@Mbalie78546014</a></h3>
     <h3>Whatsapp: 0685750358</h3>
     </div>
     <footer>
       <p>This project was coded by Mbali Letsoara, published on
-      <a href="https://github.com/Mbalie3737/My_portfolio">Github</a>
+      <a href="https://github.com/Mbalie3737/My_portfolio" target="_blank" title="Github-portfolio">Github</a>
       hosted on
-      <a href="https://mbali-portfolio.netlify.app/">Netlify</a>.</p>
+      <a href="https://mbali-portfolio.netlify.app/" target="_blank" title="Netlify-portfolio">Netlify</a>.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
