--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mbali_Letsoara</title>
+    <meta name="description" content="Mbali is a software developer learn more about her">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,16 +14,16 @@
 </head>
 <body>
     <nav class="navbar sticky-top shadow-sm p-3 mb-5 border rounded navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Mbali Letsoara</a>
+        <a class="navbar-brand" href="#" title="Mbali_Letsoara">Mbali Letsoara</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="projects.html">My work</a>
-            <a class="nav-item nav-link" href="qualifications.html">Achievements</a>
-            <a class="nav-item nav-link" href="contact.html">Contact me</a>
+            <a class="nav-item nav-link active" href="#" title="Home-page">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="projects.html" title="work-page">My work</a>
+            <a class="nav-item nav-link" href="qualifications.html" title="My_Achievements">Achievements</a>
+            <a class="nav-item nav-link" href="contact.html" title="contact-page">Contact me</a>
 
           </div>
         </div>
@@ -43,9 +44,9 @@
   </div>
   <footer>
     <p>This project was coded by Mbali Letsoara, published on
-    <a href="https://github.com/Mbalie3737/My_portfolio" target="_blank">Github</a>
+    <a href="https://github.com/Mbalie3737/My_portfolio" target="_blank" title="Github-project">Github</a>
     hosted on
-    <a href="https://mbali-portfolio.netlify.app/" target="_blank">Netlify</a>.
+    <a href="https://mbali-portfolio.netlify.app/" target="_blank" title="Netlify-project">Netlify</a>.
     </p>
   </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
