--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My_Work_Page</title>
+    <meta name="description" content="Learn more about my recent projects">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,16 +14,16 @@
 </head>
 <body>
     <nav class="navbar sticky-top shadow-sm mb-5 p-3 border rounded navbar-expand-lg navbar-light bg-light ">
-        <a class="navbar-brand" href="#">Mbali Letsoara</a>
+        <a class="navbar-brand" href="#" title="Mbali_Letsoara">Mbali Letsoara</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">My work</a>
-            <a class="nav-item nav-link" href="qualifications.html">Achievements</a>
-            <a class="nav-item nav-link" href="contact.html">Contact me</a>
+            <a class="nav-item nav-link active" href="index.html" title="Home-page">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#" title="work-page">My work</a>
+            <a class="nav-item nav-link" href="qualifications.html" title="My_Achievements">Achievements</a>
+            <a class="nav-item nav-link" href="contact.html" title="contact-page">Contact me</a>
           </div>
         </div>
       </nav>
@@ -30,34 +31,34 @@
   <div class="work-container">
     <div class="row">
       <div class="col-sm-6 mb-5">
-            <img src="images/reading.png"class="img-fluid shadow-sm border mb-3 rounded" alt="...">
+            <img src="images/reading.png"class="img-fluid shadow-sm border mb-3 rounded" alt="reading-image">
   </div>
   <div class="col-sm-6 mb-5">
               <p>This was my first project as a begginer, I had so much fun doing a project based on one of my hobbies.</p>
-               <a class="btn border" style="background-color: #885df1; color: white;" href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/994/103/original/basics_project.html?1703277254" role="button">Learn more</a>
+               <a class="btn border" style="background-color: #885df1; color: white;" href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/994/103/original/basics_project.html?1703277254" target="_blank" title="Mbali-basics-project" role="button">Learn more</a>
           </div>
 <div class="col-sm-6 mb-5">
           <p>This was my croissant website. It was a bit challenging because I was learning new things but I think I got the hang of it and built a basic website for one of my favourite foods.</p>
-          <a class="btn border" style="background-color: #885df1; color: white;" href="https://mbali-letsoara-croissant.netlify.app/" role="button">Learn more</a>
+          <a class="btn border" style="background-color: #885df1; color: white;" href="https://mbali-letsoara-croissant.netlify.app/" target="_blank" title="croissant-project" role="button">Learn more</a>
 </div>
       <div class="col-sm-6 mb-5">
-            <img src="images/croissant-website.png" class="img-fluid shadow-sm border mb-3 rounded " alt="...">
+            <img src="images/croissant-website.png" class="img-fluid shadow-sm border mb-3 rounded " alt="croissant-image">
         </div>
           <div class="col-sm-6 mb-3">
-            <img src="images/weather-app.png" class="img-fluid shadow-sm border mb-3 rounded" alt="...">
+            <img src="images/weather-app.png" class="img-fluid shadow-sm border mb-3 rounded" alt="weather-image">
           </div>
           <div class="col-sm-6 mb-3">
               <p>This project was the most challenging because it included some advanced javascript, it was a rollercoaster but as soon as I started understanding java a bit I was able to get my desired results with regards to APIs and my forms, it is such a rewarding feeling when my code responds the way I expect it to, and also if there are any bugs it is so nice to finally spot the bug and fix it. Every challenge made me fall in love with coding all over again.
               </p>
-              <a class="btn border" style="background-color: #885df1; color: white;" href="https://resonant-unicorn-36d89f.netlify.app/" role="button">Learn more</a>
+              <a class="btn border" style="background-color: #885df1; color: white;" href="https://resonant-unicorn-36d89f.netlify.app/" target="_blank" title="weather-app" role="button">Learn more</a>
               </div>
               </div>
               </div>
       <footer>
         <p>This project was coded by Mbali Letsoara, published on
-        <a href="https://github.com/Mbalie3737/My_portfolio">Github</a>
+        <a href="https://github.com/Mbalie3737/My_portfolio" target="_blank" title="Github-portfolio">Github</a>
         hosted on
-        <a href="https://mbali-portfolio.netlify.app/">Netlify</a>.</p>
+        <a href="https://mbali-portfolio.netlify.app/" target="_blank" title="Netlify-portfolio">Netlify</a>.</p>
       </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
