--- a/qualifications.html
+++ b/qualifications.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My_Achievements</title>
+    <meta name="description" content="Mbali_Letsoara-Achievements">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,38 +14,38 @@
 </head>
 <body>
     <nav class="navbar sticky-top shadow-sm p-3 mb-5 border rounded navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Mbali Letsoara</a>
+        <a class="navbar-brand" href="#" title="Mbali_Letsoara">Mbali Letsoara</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="projects.html">My work</a>
-            <a class="nav-item nav-link" href="#">Achievements</a>
-            <a class="nav-item nav-link" href="contact.html">Contact me</a>
+            <a class="nav-item nav-link active" href="index.html" title="Home-page">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="projects.html" title="work-page">My work</a>
+            <a class="nav-item nav-link" href="#" title="My_Achievements">Achievements</a>
+            <a class="nav-item nav-link" href="contact.html" title="contact-page">Contact me</a>
           </div>
         </div>
       </nav>
-    <h1 class="mb-5 p-5 text-center">My Shecodes certificates</h1>
+    <h1 class="mb-5 p-5 text-center">My Shecodes certificates👩‍🎓</h1>
     <div class="image-container">
         <div class="row">
             <div class="col-sm-4">
-    <img src="images/Mbali-basics-Certificate.png" alt="" class="img-fluid shadow-sm border mb-3 rounded">
+    <img src="images/Mbali-basics-Certificate.png" alt="Mbali-basics-Certificate" class="img-fluid shadow-sm border mb-3 rounded">
     </div>
     <div class="col-sm-4">
-    <img src="images/Mbali-Plus-Certificate.png" alt="" class="img-fluid shadow-sm border mb-3 rounded">
+    <img src="images/Mbali-Plus-Certificate.png" alt="Mbali-Plus-Certificate" class="img-fluid shadow-sm border mb-3 rounded">
     </div>
     <div class="col-sm-4">
-    <img src="images/Responsive-certificate.png" alt="" class="img-fluid shadow-sm border mb-3 rounded">
+    <img src="images/Responsive-certificate.png" alt="Mbali-responsive-Certificate" class="img-fluid shadow-sm border mb-3 rounded">
     </div>
     </div>
     </div>
     <footer>
       <p>This project was coded by Mbali Letsoara, published on
-      <a href="https://github.com/Mbalie3737/My_portfolio">Github</a>
+      <a href="https://github.com/Mbalie3737/My_portfolio" target="_blank" title="Github-portfolio">Github</a>
       hosted on
-      <a href="https://mbali-portfolio.netlify.app/">Netlify</a>.</p>
+      <a href="https://mbali-portfolio.netlify.app/" target="_blank" title="Netlify-portfolio">Netlify</a>.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
